[gd_scene load_steps=9 format=3 uid="uid://bym2gmi7y6o27"]

[ext_resource type="Script" path="res://scenes/alchemy/flare.gd" id="1_vanpb"]
[ext_resource type="ArrayMesh" uid="uid://cn6cncexuu2se" path="res://assets/models/ingredients/jar_mesh.res" id="2_jvqa0"]
[ext_resource type="Script" path="res://scripts/classes/interaction_component.gd" id="3_hwk3w"]
[ext_resource type="PackedScene" uid="uid://c3ytu1ghl2t8x" path="res://scenes/fx/fire_beam.tscn" id="4_5lh6f"]
[ext_resource type="Script" path="res://scripts/classes/ingredient_component.gd" id="4_lha62"]
[ext_resource type="PackedScene" uid="uid://deqfjrh5bdyvk" path="res://scenes/fx/smoke.tscn" id="5_td1f0"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4po6i"]
points = PackedVector3Array(0.0930353, 0.28386, 0.0203736, -0.0960389, 0.0270282, -0.00999774, -0.095717, 0.0276303, 0.014491, -0.0691608, 0.39407, -0.0235774, 0.0388034, 0.0286103, -0.0890941, 0.0207371, 0.0268472, 0.0945642, -0.0301006, 0.39407, 0.0676092, 0.0480593, 0.39407, -0.0561539, -0.0278437, 0.25927, -0.0939835, 0.0942358, 0.0274616, -0.0222344, -0.0753405, 0.264833, 0.0618562, 0.0415559, 0.39407, 0.0610662, -0.0475643, 0.00564191, -0.066287, 0.0759888, 0.0209938, 0.0575361, -0.0469959, 0.020382, 0.0823963, 0.0678269, 0.270789, -0.0693984, 0.0323488, 0.259391, 0.0926198, -0.0939886, 0.259273, -0.027827, -0.0525798, 0.0346319, -0.0830349, -0.0278715, 0.271353, 0.0925078, -0.0496307, 0.400558, -0.0496307, 0.0143604, 0.277936, -0.0947909, 0.0771073, 0.00585653, 0.027221, 0.0800608, 0.265068, 0.0560867, -0.0692534, 0.264719, -0.0692534, -0.0938799, 0.26523, 0.0262058, 0.0925125, 0.271356, -0.0278546, 0.0675894, 0.39407, 0.0284897, -0.0477137, 0.00500433, 0.0649248, -0.056154, 0.400558, 0.0415361, -0.0830349, 0.0346319, -0.0525798, -0.00999775, 0.0270282, -0.0960389)

[sub_resource type="SphereShape3D" id="SphereShape3D_mr75j"]
radius = 4.0

[node name="FLARE" type="RigidBody3D"]
collision_layer = 4
linear_damp = 5.0
script = ExtResource("1_vanpb")
type = 20

[node name="Mesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 6.70861e-09, -0.153475)
mesh = ExtResource("2_jvqa0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 7.20396e-09, -0.164807)
shape = SubResource("ConvexPolygonShape3D_4po6i")

[node name="FireBeam" parent="." instance=ExtResource("4_5lh6f")]
emitting = false
amount = 55
lifetime = 0.14

[node name="Smoke" parent="." instance=ExtResource("5_td1f0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.214808)
emitting = false

[node name="Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.159074)
visible = false
light_color = Color(1, 0.26, 0.26, 1)
omni_range = 4.06351

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="InteractionComponent" type="Node" parent="." node_paths=PackedStringArray("mesh")]
script = ExtResource("3_hwk3w")
mesh = NodePath("../Mesh")

[node name="IngredientComponent" type="Node" parent="."]
script = ExtResource("4_lha62")

[node name="ShadowBarrier" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShadowBarrier"]
shape = SubResource("SphereShape3D_mr75j")

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="area_entered" from="ShadowBarrier" to="." method="_on_shadow_barrier_area_entered"]
